
- 03-21-04: Added range check for negative stat bonuses (they become 0). [Colus]
- 03-21-04: Now supporting items/cards with negative stat modifiers. [Colus]
- 03-21-04: Fixed armor items/cards giving status attack+ instead of resist+. [Colus]
- 03-20-04: Fixed a few lag issues while players attack near each other.  [Darkhelmet]
- 03-19-04: Fixed Waterball Crash PvP. Bug #597.  [Darkhelmet]
- 03-19-04: Cleaned up a few more commonly called code bits and comments. [Colus]
- 03-19-04: Corrected weapon skill expiration code. [Colus]
- 03-19-04: Fixed Assassin Cross wielding double daggers. [Colus]
- 03-19-04: Added #option <#> for testing. [Colus]
- 03-19-04: Standardized all icon updates. [Colus]
- 03-19-04: Updated Adrenaline Rush with correct weapon check. [Colus]
- 03-19-04: Updated Hammerfall with correct weapon requirement. [Colus]
- 03-19-04: Updated Backstab (can be used whether hiding or not). [Colus]
- 03-19-04: Fixed icon removal of Hide/Cloak when hit by chars/monsters. [Colus]
- 03-19-04: Fixed potential crash problem with Hide/Cloak SP drain. [Colus]
- 03-19-04: Changed functionality of StealMultiplier. [Colus]
- 03-19-04: Fixed packet problem with Steal. [Colus]
- 03-18-04: Fixed Bug 650, range check error in damagecalc1. [Darkhelmet]
- 03-17-04: A little more object abstraction. [Colus]
- 03-17-04: Reactivated peco/falcon/overweight icons without lag. [Colus]
- 03-17-04: Standardized all status update calls. [Colus]
- 03-17-04: Sohee pet skill no longer heals you when dead (or playing dead). [Colus]
- 03-17-04: Readded alex's fix from 2-6 re. PvP parties w/Pneuma/SW. [Colus]
- 03-16-04: Rearranged object hierarchy slightly. [Colus]
- 03-16-04: Added Detect effect on monsters. [Colus]
- 03-16-04: Added some documentation on new options. [Colus]

--------------------------------------------------------------------------------
Fusion 1.210 - March 13th, 2004
--------------------------------------------------------------------------------